# scs-admin

./: .env  pyproject.toml
src/: const.py  database.py  main.py
src/models/: model_common.py
