[tool.poetry]
name = "scs-admin"
version = "0.1.0"
description = ""
authors = ["johnny.kim <johnny.kim@dencomm.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115.5"
uvicorn = "^0.32.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
